fix(sdk-app): cap InterfaceLib ComboBox options and raise RightPanelShell z-index

--- a/sdk-app/src/InterfaceLib/ComboBox/ComboBox.module.scss
+++ b/sdk-app/src/InterfaceLib/ComboBox/ComboBox.module.scss
@@ -24,9 +24,6 @@
   background-color: #ffffff;
   color: #101010;
   cursor: text;
-  transition:
-    background-color 0.24s,
-    color 0.24s;
 
   &::after {
     content: '';
@@ -117,10 +114,6 @@
   pointer-events: none;
   transform-origin: 0 0;
   transform: scale(0.875);
-  transition:
-    transform 0.24s,
-    color 0.24s,
-    font-weight 0.24s;
 }
 
 .input:placeholder-shown:not(:focus) ~ .label {
@@ -243,7 +236,6 @@
   color: #101010;
   cursor: pointer;
   outline: none;
-  transition: background-color 0.16s ease-out;
 
   &[data-hovered],
   &[data-focused],
